--- a/application.yml
+++ b/application.yml
@@ -10,3 +10,8 @@ spring:
   output:
     ansi:
       enabled: ALWAYS
+
+okta:
+  oauth2:
+    issuer: https://dev-80910482.okta.com/oauth2/default
+    audience: api://default
